* Ninja fix for z-index issue regarding communicator's reply message fields

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-panel.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-panel.scss
@@ -117,7 +117,7 @@
   position: fixed;
   right: 0;
   top: $navbar-mobile-height;
-  z-index: 2;
+  z-index: 99;
 
   @include breakpoint($breakpoint-pad) {
     align-items: center;
